--- a/src/css/media/desktop/menu.css
+++ b/src/css/media/desktop/menu.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 40px;
   background-color: #0b0b0b;
+  position: unset;
   .nav {
     width: 100%;
     height: 100%;
@@ -22,14 +23,18 @@
         text-decoration: none;
         text-transform: capitalize;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 13px;
+        font-size: 14px;
         color: whitesmoke;
         transition: 800ms;
-        &:hover {
-          transform: scalex(2) scaleY(2);
+        &:active {
+          transform: scalex(0.9) scaleY(0.9);
           background-color: blue;
         }
       }
     }
   }
+}
+
+.image , .mobile_menu{
+  display: none;
 }
