--- a/src/css/media/mobile/footer.css
+++ b/src/css/media/mobile/footer.css
@@ -1,7 +1,7 @@
 footer{
     width: 100%;
     height: 40px;
-    background-color:  #2b2b2b; 
+    background-color:  darkolivegreen; 
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 14px;
